Fixed to not have underline of whitespace for iOS App Store footer link.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -899,6 +899,7 @@ room-sidebar-width = 240px
 
   .app-link
     margin-left 10px
+    text-decoration none
 
   .first-app-link
     margin-left 0
